--- a/config/thin.yml
+++ b/config/thin.yml
@@ -8,7 +8,7 @@ log: log/thin.log
 max_conns: 1024
 require: []
 
-#environment: production
+environment: production
 max_persistent_conns: 512
 servers: 2
 daemonize: true
