--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+
+# ignore the precompile assets
+/public/assets/
+
+# ignore sass cache
+.sass-cache
